# wasm-languages

./: .gitignore  .gitpod.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  run-dev-container.sh
.devcontainer/: devcontainer.json
.docker/: Dockerfile  Dockerfile.dev
assemblyscript/browser-hello-world/: README.md  index.html  package-lock.json  package.json  run.sh
assemblyscript/wasi-hello-world/: README.md  package.json  run.sh
brainfuck/wasi-hello-world/: README.md  hello.bf  run.sh
c/browser-hello-world/: README.md  run.sh
c/nodejs-hello-world/: README.md  run.sh
dotnet/browser-hello-world/: App.razor  HelloWorldApp.csproj  Program.cs  README.md  _Imports.razor  run.sh
go/browser-hello-world/: README.md  go.mod  index.html  main.go  run.sh
grain/browser-hello-world/: .gitignore  README.md  index.html  package-lock.json  package.json  run.sh
grain/wasi-hello-world/: README.md  run.sh
java/browser-hello-world/: README.md  run.sh
java/browser-hello-world-bytecoder/: README.md  pom.xml  run.sh
java/browser-hello-world-j2cl/: WORKSPACE
java/embedding/: README.md  pom.xml  run.sh
java/wasi-hello-world/: README.md  pom.xml  run.sh
kotlin/browser-hello-world/: README.md  build.gradle.kts  run.sh  settings.gradle.kts
kotlin/nodejs-hello-world/: README.md  build.gradle.kts  gradle.properties  run.sh  settings.gradle.kts
rust/browser-hello-world/: .gitignore  Cargo.toml  README.md  index.html  run-dev.sh
rust/browser-hello-world/src/: lib.rs
zig/: .gitignore  README.md  build.sh  build.zig  index.mjs  run.sh
(+47 files in other folders)
